# mindsdk-referenceapps

./: .gitignore  OWNERS  README.md  README.zh.md  test.py
AgentSDK/: READM.md  requirements.txt
AgentSDK/agent_skills/: README.md
AgentSDK/data_generation_platform/: app.py  config.json  main.py  requirements.txt  使用指南.md
AgentSDK/examples/: README.md
Index SDK/: README.md  TestAscendIndexGreat.cpp  TestAscendIndexIVFSP.cpp  TestAscendIndexInt8FlatWithReduction.cpp
Index SDK/Dockerfile/: Dockerfile-ascend-toolkit.txt
Index SDK/faiss-python/: Faiss安装参考.md  setup.py
IndexSDK/: README.md  TestAscendIReduction.cpp  TestAscendIndexAggressTs.cpp  TestAscendIndexBinaryFlat.cpp  TestAscendIndexCluster.cpp  TestAscendIndexFlat.cpp  TestAscendIndexGreat.cpp  TestAscendIndexILFlat.cpp  TestAscendIndexIVFFlat.cpp  TestAscendIndexIVFPQ.cpp  TestAscendIndexIVFRabitQ.cpp  TestAscendIndexIVFSP.cpp  TestAscendIndexIVFSQ.cpp  TestAscendIndexIVFSQT.cpp  TestAscendIndexIVFSQTwithCpuFlat.cpp  TestAscendIndexInt8Flat.cpp  TestAscendIndexInt8FlatWithCPU.cpp  TestAscendIndexInt8FlatWithReduction.cpp  TestAscendIndexInt8FlatWithSQ.cpp  TestAscendIndexSQ.cpp  TestAscendIndexSQMulPerformance.cpp  TestAscendIndexTS.cpp  TestAscendIndexTS_int8Cos.cpp  TestAscendIndexVStar.cpp  TestAscendMultiSearch.cpp  dependencies.cmake
IndexSDK/Dockerfile/: DockerFile-index  Dockerfile-ascendbase-infer.txt  install_deps.sh  urls.conf
IndexSDK/faiss-python/: Faiss安装参考.md  ascendfaiss.py  setup.py  swig_ascendfaiss.swig  test_ascend_index_flat.py
RAGSDK/: README.md
RAGSDK/MainRepo/: README.md
RAGSDK/PocValidation/: README.md  rag_recursive_tree_demo.py
RAGSDK/opensource/: README.md
VisionSDK/AiPhysicalAttackAndDetecting/: ReadMe.md  args.py
VisionSDK/AllObjectsStructuring/: CMakeLists.txt  README.md
VisionSDK/AllObjectsStructuringV2/: README.MD
VisionSDK/AscendFFmpegPlugin/: README.md
VisionSDK/Ascendffmpeg/: README.md  README_DEV.md  ascend_ffmpeg.patch  dec_h26x_ascend.md  dec_mjpeg_ascend.md  enc_h26x_ascend.md
VisionSDK/AsyncInfer/: CMakeLists.txt  build.sh
VisionSDK/GeneralTextRecognition/: README.md
VisionSDK/ImageProcessor/: README.md
VisionSDK/InferOfflineVideo/: README.md  main.cpp  run.sh
VisionSDK/MediaCodec/: README.zh.md
VisionSDK/OpticalCharacterRecognition/: README.md
VisionSDK/PPYOLOEPlusDetection/: CMakeLists.txt  README.md
VisionSDK/PutTextForMultiVideos/: CMakeLists.txt  README.md  main.cpp  setup.config
VisionSDK/RtspServer/: README.zh.md
VisionSDK/TrustedAudit/: README.md
VisionSDK/YOLOv7Detection/: CMakeLists.txt  README.md  main.cpp  run.sh
VisionSDK/YoloV3Infer/: CMakeLists.txt  README.md
contrib/: CONTRIBUTING.md
contrib/ADNet/: README.md
contrib/ActionRecognition/: README.md
contrib/AutoSpeechRecognition/: README.md  main.py  main_sig.py  post_process.py  pre_process.py
contrib/BertTextClassification/: README.md
contrib/Burpee_Detection/: README.md
contrib/CamouflagedObjectDetection/: README.md  inference_om.py
contrib/CarPlateRecognition/: CMakeLists.txt  README.md
contrib/CartoonGANPicture/: CMakeLists.txt  README.md
contrib/CenterFace/: README.md
contrib/CenterNet/: README.md
contrib/Collision/: README.md  collision.py
contrib/Colorization/: README.md
contrib/CrowdCounting/: CMakeLists.txt  README.md
contrib/DocumentLayoutAnalysis/: README.md
contrib/DriverStatusRecognition/: README.md  main.py  run.sh
contrib/EdgeDetectionPicture/: CMakeLists.txt  README.md
contrib/EfficientDet/: README.md
contrib/ErfnetSegmentation/: README.md
contrib/FCOS/: README.md  build.sh
contrib/FaceBoxes/: README.md  main.py  test.py
contrib/FairMOT/: CMakeLists.txt  README.md
contrib/FastSCNN/: README.md  evaluate.py  label.py
contrib/Faster_R-CNN/: README.md
contrib/FatigueDrivingRecognition/: README.md
contrib/FireDetection/c++/: CMakeLists.txt  README.md  aipp_yolov5.cfg   main.cpp  setup.config
contrib/FireDetection/c++/BlockingQueue/: BlockingQueue.h
contrib/FireDetection/c++/ConfigParser/: ConfigParser.cpp  ConfigParser.h
contrib/FireDetection/c++/FrameAnalyzer/: FrameAnalyzer.cpp  FrameAnalyzer.h
contrib/FireDetection/c++/VideoDecoder/: VideoDecoder.cpp  VideoDecoder.h
contrib/GestureKeypointDetection/: README.md
contrib/HelmetIdentification/: README.md
contrib/IAT/: README.md  main.py
contrib/Individual/: README.md
contrib/MMNET/: README.md
contrib/MediaCodeV2/: README.md
contrib/MeterReader/: README.md
contrib/ModleSample/: README.md
contrib/ModleSample/C++/: CMakeLists.txt  main.cpp  run.sh
contrib/MonocularDepthEstimation/: README.md  main.py
contrib/MultiChannelVideoDetection/: CMakeLists.txt  README.md  main.cpp  run.sh
contrib/OpenCVPlugin/: README.md
contrib/OpenposeKeypointDetection/: README.md
contrib/PassengerflowEstimation/: README.md
contrib/PatchCoreAnomalyDetection/: README.md
contrib/PatchCoreAnomalyDetection_mindspore/: README.md
contrib/PedestrianAttributeRecognition/: README.md
contrib/PersonCount/: README.md  main.py
contrib/VideoGestureRecognition/: CMakeLists.txt  README.md  main.cpp  run.sh
contrib/VideoGestureRecognition/ResnetDetector/: ResnetDetector.cpp  ResnetDetector.h
mxAgent/: READM.md  README.md  app.py  requirements.txt
mxIndex/: CMakeLists.txt  README.md  TestAscendIndexAggressTs.cpp  TestAscendIndexBinaryFlat.cpp  TestAscendIndexCluster.cpp  TestAscendIndexIVFSP.cpp  TestAscendIndexIVFSQ.cpp  TestAscendIndexIVFSQTwithCpuFlat.cpp  TestAscendIndexInt8FlatWithSQ.cpp  TestAscendIndexSQMulPerformance.cpp  TestAscendIndexTS_int8Cos.cpp  TestAscendMultiSearch.cpp  build.sh
mxIndex/faiss-python/: MANIFEST.in  ascendfaiss.py  swig_ascendfaiss.swig
mxRAG/: README.md  readme.md
mxVision/PutText/PutText/: CMakeLists.txt  CaptionGenManager.cpp  CaptionGenManager.h  CaptionGeneration.cpp  CaptionGeneration.h  CaptionImpl.cpp  CaptionImpl.h  CaptionPool.cpp  CaptionPool.h  main.cpp  readme.md
tutorials/VideoEncoder&VideoDecoder/C++/: CMakeLists.txt  build.sh  main.cpp
tutorials/samplePluginPostProc/: CMakeLists.txt
(+770 files in other folders)
