CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(single_test)
SET(CMAKE_CXX_STANDARD 14)

INCLUDE(dependencies.cmake)

ADD_COMPILE_OPTIONS(-g)


FILE(GLOB TEST_SRC_FILES "TestAscend*.cpp")
FOREACH(FILE_PATH ${TEST_SRC_FILES})
  STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${FILE_PATH})

  ADD_EXECUTABLE(${FILE_NAME} ${FILE_PATH} ${ASCENDFAISS_HOST_SRC})

ENDFOREACH(FILE_PATH)

# Test case
#ADD_EXECUTABLE(TestAscendIndexTS TestAscendIndexTS.cpp)


